# Barnes2019-DepressionHierarchy

./: CMakeLists.txt  README.md
include/dephier/: DisjointDenseIntSet.hpp  dephier.hpp
src/: dephier_paper_tests.cpp  main.cpp
